--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,8 @@ jobs:
           echo "Evento: ${{toJSON(github.event)}}"
           echo "GitHub Actor: ${{github.actor}}"
           echo "GitHub Repository: $GITHUB_REPOSITORY"
+
+      - name: "!Existe user"
+        if: ${{env.username == '' && env.password == ''}}
+        run: |
+          echo "No existe user"
